--- a/crates/dir_walker/Cargo.toml
+++ b/crates/dir_walker/Cargo.toml
@@ -12,11 +12,12 @@ homepage.workspace = true
 path = "src/lib.rs"
 
 [features]
-default = ["full"]
+default = ["full", "enable-tracing"]
 full = ["ignore", "memory", "glob"]
 ignore = ["dep:ignore"]
 memory = []
 glob = ["ignore", "dep:globset"]
+enable-tracing = ["dep:tracing", "dep:trace", "trace/enabled"]
 
 [dependencies]
 ignore = { workspace = true, optional = true }
@@ -25,3 +26,5 @@ thiserror = { workspace = true }
 derive_builder = { workspace = true }
 globset = { workspace = true, optional = true }
 strum = { workspace = true }
+trace = { workspace = true, optional = true }
+tracing = { workspace = true, optional = true }
