--- a/crates/dir_walker/project.omni.yaml
+++ b/crates/dir_walker/project.omni.yaml
@@ -1,10 +1,5 @@
 # yaml-language-server: $schema=../../artifacts/json-schemas/project.json
-name: omni_cache
+name: dir_walker
 
 extends:
   - "@workspace/omni/presets/rust-lib.omni.yaml"
-
-dependencies:
-  - omni_hasher
-  - omni_types
-  - dir_walker
