--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ tracing-serde = { version = "^0.2.0" }
 futures = { version = "^0.3.31" }
 thiserror = "^2.0.12"
 eyre = "^0.6.12"
-time = { version = "^0.3.41", features = [] }
+time = { version = "^0.3.41", features = ["serde", "serde-human-readable"] }
 derive_more = { version = "^2.0.1", features = ["full"] }
 derive-new = { version = "^0.7.0" }
 strum = { version = "^0.27.2", features = ["derive"] }
