--- a/crates/omni_cache/Cargo.toml
+++ b/crates/omni_cache/Cargo.toml
@@ -39,6 +39,7 @@ globset = { workspace = true }
 bytes = { workspace = true }
 trace = { workspace = true, optional = true }
 tracing = { workspace = true, optional = true }
+time = { workspace = true }
 
 [dev-dependencies]
 tempfile = { workspace = true }
