--- a/omni/presets/rust-lib.omni.yaml
+++ b/omni/presets/rust-lib.omni.yaml
@@ -15,9 +15,19 @@ extends:
   - "./base.omni.yaml"
 
 tasks:
-  test: cargo test -p ${PROJECT_NAME}
+  test:
+    command: cargo test -p ${PROJECT_NAME}
+    cache:
+      key:
+        files:
+          append: ["./tests/**/*.rs"]
 
-  bench: cargo bench -p ${PROJECT_NAME}
+  bench:
+    command: cargo bench -p ${PROJECT_NAME}
+    cache:
+      key:
+        files:
+          append: ["./benches/**/*.rs"]
 
   profile:
     command: cargo flamegraph --profile=${profile:-bench-with-debug} --bench ${bench:-${PROJECT_NAME}_benchmarks} -p ${PROJECT_NAME} -- --bench --profile-time=${profile_time:-5}
