feat: support for meta filter

--- a/cli/omni/Cargo.toml
+++ b/cli/omni/Cargo.toml
@@ -78,6 +78,7 @@ ahash = { workspace = true }
 bytes = { workspace = true }
 owo-colors = { workspace = true }
 tiny-gradient = { workspace = true }
+omni_expressions = { workspace = true }
 
 [build-dependencies]
 shadow-rs = { workspace = true, features = ["default"] }
