--- a/cli/omni/Cargo.toml
+++ b/cli/omni/Cargo.toml
@@ -6,79 +6,29 @@ version.workspace = true
 authors.workspace = true
 repository.workspace = true
 
+[[bench]]
+path = "./benches/omni_benchmarks.rs"
+name = "omni_benchmarks"
+harness = false
+
 [features]
 default = ["enable-tracing"]
 dhat-heap = ["dep:dhat"]
-enable-tracing = [
-    "trace/enabled",
-    "dep:tracing",
-    "dep:tracing-core",
-    "dep:tracing-subscriber",
-]
+enable-tracing = ["trace/enabled", "dep:trace", "dep:tracing-subscriber"]
 
 [dependencies]
-#oxc = { workspace = true }
-eyre = { workspace = true }
-clap = { workspace = true }
-derive_more = { workspace = true }
-derive-new = { workspace = true }
-clap_complete = { workspace = true }
-shadow-rs = { workspace = true }
-tokio = { workspace = true }
-tokio-util = { workspace = true }
-futures = { workspace = true }
-trace = { workspace = true, optional = true }
-tracing = { workspace = true, optional = true }
-tracing-core = { workspace = true, optional = true }
-tracing-subscriber = { workspace = true, optional = true }
-omni_types = { workspace = true }
-serde = { workspace = true }
-serde_json = { workspace = true }
-serde_yml = { workspace = true }
-schemars = { workspace = true }
-globset = { workspace = true }
-regex = { workspace = true }
-lazy-regex = { workspace = true }
-omni_core = { workspace = true }
-config_utils = { workspace = true, features = [
-    "serde",
-    "schemars",
-    "validator-garde",
-] }
-merge = { workspace = true }
-toml = { workspace = true }
-js_runtime = { workspace = true }
-system_traits = { workspace = true, features = [
-    "real-async-tokio",
-    "real-sync",
-    "memory-async",
-] }
-dir_walker = { workspace = true, features = ["ignore", "memory"] }
-petgraph = { workspace = true }
-thiserror = { workspace = true }
-defer = { workspace = true }
-strum = { workspace = true }
-garde = { workspace = true }
-env_loader = { workspace = true }
-env = { workspace = true }
-os_pipe = { workspace = true }
-globwalk = { workspace = true }
-maps = { workspace = true }
-sets = { workspace = true }
 dhat = { workspace = true, optional = true }
-enum-map = { workspace = true }
-portable-pty = { workspace = true }
-terminal_size = { workspace = true }
-rmcp = { workspace = true }
-omni_cache = { workspace = true }
-omni_hasher = { workspace = true }
-derive_builder = { workspace = true }
-bs58 = { workspace = true }
-ahash = { workspace = true }
-bytes = { workspace = true }
-owo-colors = { workspace = true }
-tiny-gradient = { workspace = true }
-omni_expressions = { workspace = true }
+omni_cli_core = { workspace = true }
+trace = { workspace = true, optional = true }
+tracing-subscriber = { workspace = true, optional = true }
+eyre = { workspace = true }
+tokio = { workspace = true }
+clap = { workspace = true }
+system_traits = { workspace = true }
+
+[dev-dependencies]
+criterion = { workspace = true }
+omni_test_utils = { workspace = true }
 
 [build-dependencies]
 shadow-rs = { workspace = true, features = ["default"] }
