feat: add omni load_projects benchmarks

--- a/cli/omni/Cargo.toml
+++ b/cli/omni/Cargo.toml
@@ -27,6 +27,7 @@ clap = { workspace = true }
 system_traits = { workspace = true }
 
 [dev-dependencies]
+tempfile = { workspace = true }
 criterion = { workspace = true }
 omni_test_utils = { workspace = true }
 
