--- a/crates/dir_walker/Cargo.toml
+++ b/crates/dir_walker/Cargo.toml
@@ -29,3 +29,4 @@ strum = { workspace = true }
 trace = { workspace = true, optional = true }
 tracing = { workspace = true, optional = true }
 derive-new = { workspace = true }
+crossbeam-channel = { workspace = true }
