--- a/omni/presets/base.omni.yaml
+++ b/omni/presets/base.omni.yaml
@@ -1,2 +1,6 @@
 # yaml-language-server: $schema=../../artifacts/json-schemas/project.json
 name: base
+
+tasks:
+  passthrough:
+    description: Only exists so dependents can be re-executed based on the changes of a dependees
