--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,18 +4,14 @@ members = ["cli/*", "crates/*"]
 # default-members = ["cli/omni"]
 
 [workspace.package]
-homepage = "https://github.com/omni-build/omni"
+homepage = "https://github.com/omni-oss/omni"
 license = "MIT"
-repository = "https://github.com/omni-build/omni"
-keywords = ["build", "build-system", "build-tools", "cli", "omni", "devops"]
+repository = "https://github.com/omni-oss/omni"
+keywords = []
 readme = "README.md"
 documentation = "https://docs.rs/omni"
 description = "A build system for the modern age"
-categories = [
-    "command-line-utilities",
-    "development-tools",
-    "development-tools::build-utils",
-]
+categories = []
 rust-version = "1.89.0"
 edition = "2024"
 version = "0.0.0-semantically-released"
@@ -132,6 +128,7 @@ omni_cli_core = { path = "./crates/omni_cli_core" }
 cel = { version = "^0.11.0", features = ["json", "regex"] }
 omni_test_utils = { path = "./crates/omni_test_utils" }
 crossbeam-channel = { version = "^0.5.15" }
+shlex = { version = "^1.3.0" }
 
 [profile.release]
 incremental = true
