--- a/Cargo.toml
+++ b/Cargo.toml
@@ -106,7 +106,7 @@ dashmap = { version = "^6.1.0", features = ["serde", "rayon"] }
 ahash = { version = "^0.8.12" }
 maps = { path = "./crates/maps" }
 sets = { path = "./crates/sets" }
-criterion = { version = "^0.7.0", features = ["html_reports"] }
+criterion = { version = "^0.7.0", features = ["html_reports", "async_tokio"] }
 dhat = { version = "^0.3.3" }
 enum-map = { version = "^2.7.3" }
 portable-pty = { version = "^0.9.0" }
