feat: improve load_projects performance by 50-60%

--- a/crates/dir_walker/Cargo.toml
+++ b/crates/dir_walker/Cargo.toml
@@ -30,3 +30,4 @@ trace = { workspace = true, optional = true }
 tracing = { workspace = true, optional = true }
 derive-new = { workspace = true }
 crossbeam-channel = { workspace = true }
+num_cpus = { workspace = true }
