--- a/Cargo.toml
+++ b/Cargo.toml
@@ -129,6 +129,8 @@ cel = { version = "^0.11.0", features = ["json", "regex"] }
 omni_test_utils = { path = "./crates/omni_test_utils" }
 crossbeam-channel = { version = "^0.5.15" }
 shlex = { version = "^1.3.0" }
+path-clean = { version = "^1.0.1" }
+num_cpus = { version = "^1.17.0" }
 
 [profile.release]
 incremental = true
