chore: add omni_generator project

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -111,7 +111,7 @@ dhat = { version = "^0.3.3" }
 enum-map = { version = "^2.7.3" }
 portable-pty = { version = "^0.9.0" }
 terminal_size = { version = "^0.4.2" }
-rmcp = { version = "^0.5.0", features = ["server", "macros"] }
+rmcp = { version = "^0.6.0", features = ["server", "macros"] }
 rs_merkle = { version = "^1.5.0" }
 omni_cache = { path = "./crates/omni_cache" }
 omni_hasher = { path = "./crates/omni_hasher" }
@@ -131,6 +131,7 @@ crossbeam-channel = { version = "^0.5.15" }
 shlex = { version = "^1.3.0" }
 path-clean = { version = "^1.0.1" }
 num_cpus = { version = "^1.17.0" }
+omni_generator = { path = "./crates/omni_generator" }
 
 [profile.release]
 incremental = true
