--- a/.github/workflows/build-and-release.yaml
+++ b/.github/workflows/build-and-release.yaml
@@ -46,11 +46,11 @@ jobs:
 
       - name: Compress binary on Linux/macOS
         if: runner.os != 'Windows'
-        run: zip -j my-crate-linux.zip target/release/my-crate
+        run: zip -j my-crate-linux.zip target/release/omni
 
       - name: Compress binary on Windows
         if: runner.os == 'Windows'
-        run: 7z a my-crate-windows.zip target\release\my-crate.exe
+        run: 7z a my-crate-windows.zip target\release\omni.exe
         shell: pwsh
 
       - name: Upload compressed binary
