--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,16 +28,17 @@ jobs:
         run: cargo build --release --verbose
 
       - name: Compress binary on Linux/macOS
-        if: runner.os != 'Windows'
+        if: runner.os != 'Windows' && startsWith(github.ref, 'refs/tags/')
         run: zip -j omni-${{ matrix.os }}.zip target/release/omni
 
       - name: Compress binary on Windows
-        if: runner.os == 'Windows'
+        if: runner.os == 'Windows' && startsWith(github.ref, 'refs/tags/')
         run: 7z a omni-${{ matrix.os }}.zip target\release\omni.exe
         shell: pwsh
 
       - name: Upload compressed binary
         uses: actions/upload-artifact@v4
+        if: startsWith(github.ref, 'refs/tags/')
         with:
           name: omni-${{ matrix.os }}
           path: omni-${{ matrix.os }}.zip
