--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,11 +28,11 @@ jobs:
         run: cargo build --release --verbose
 
       - name: Compress binary on Linux/macOS
-        if: runner.os != 'Windows' && startsWith(github.ref, 'refs/tags/')
+        if: ${{ runner.os != 'Windows' && startsWith(github.ref, 'refs/tags/') }}
         run: zip -j omni-${{ matrix.os }}.zip target/release/omni
 
       - name: Compress binary on Windows
-        if: runner.os == 'Windows' && startsWith(github.ref, 'refs/tags/')
+        if: ${{ runner.os == 'Windows' && startsWith(github.ref, 'refs/tags/') }}
         run: 7z a omni-${{ matrix.os }}.zip target\release\omni.exe
         shell: pwsh
 
