--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -55,11 +55,11 @@ jobs:
       - name: Download all binaries
         uses: actions/download-artifact@v4
         with:
-          path: ./binaries
+          path: ./artifacts
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          files: ./binaries/*.zip
+          files: ./artifacts/*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
