--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
     "dependencies": {
         "@repo/biome-config": "workspace:*",
         "@repo/tsconfig": "workspace:*",
-        "@biomejs/biome": "^2.1.4",
-        "vite": "^7.1.2",
+        "@biomejs/biome": "^2.2.0",
+        "vite": "^7.1.3",
         "vitest": "^3.2.4",
         "typescript": "^5.9.2"
     },
     "workspaces": [
-        "packages/*"
+        "packages/*",
+        "scripts/*"
     ]
 }
