--- a/scripts/apply-version/package.json
+++ b/scripts/apply-version/package.json
@@ -10,6 +10,7 @@
         "@types/node": "24.2.1",
         "@types/bun": "^1.2.20",
         "ignore-walk": "^8.0.0",
-        "@types/ignore-walk": "^4.0.3"
+        "@types/ignore-walk": "^4.0.3",
+        "simple-git": "^3.28.0"
     }
 }
