--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,8 +12,23 @@ permissions:
   contents: write
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup
+        uses: ./.github/actions/setup
+        with:
+          shell: bash
+
+      - name: Test
+        run: omni run test
+
   build:
     runs-on: ${{ matrix.os }}
+    needs: test
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
@@ -32,7 +47,7 @@ jobs:
         run: bun run ./scripts/apply-version/src/index.ts
 
       - name: Build
-        run: cargo build --release --verbose
+        run: cargo build --release -p omni
 
       - name: Compress binary on Linux/macOS
         if: ${{ runner.os != 'Windows' && github.ref_type == 'tag' }}
@@ -40,7 +55,7 @@ jobs:
 
       - name: Compress binary on Windows
         if: ${{ runner.os == 'Windows' && github.ref_type == 'tag' }}
-        run: 7z a omni-${{ github.ref_name }}-${{ matrix.os }}.zip target\release\omni.exe
+        run: 7z a omni-${{ github.ref_name }}-${{ matrix.os }}.zip target\release\*.exe
         shell: pwsh
 
       - name: Upload compressed binary
