--- a/crates/env_loader/Cargo.toml
+++ b/crates/env_loader/Cargo.toml
@@ -1,8 +1,7 @@
 [package]
 name = "env_loader"
 rust-version.workspace = true
-#edition.workspace = true
-edition = "2024"
+edition.workspace = true
 version.workspace = true
 authors.workspace = true
 repository.workspace = true
