--- a/crates/config_utils/Cargo.toml
+++ b/crates/config_utils/Cargo.toml
@@ -1,8 +1,7 @@
 [package]
 name = "config_utils"
 rust-version.workspace = true
-#edition.workspace = true
-edition = "2024"
+edition.workspace = true
 version.workspace = true
 repository.workspace = true
 
