--- a/crates/omni_cache/Cargo.toml
+++ b/crates/omni_cache/Cargo.toml
@@ -1,8 +1,7 @@
 [package]
 name = "omni_cache"
 rust-version.workspace = true
-#edition.workspace = true
-edition = "2024"
+edition.workspace = true
 version.workspace = true
 repository.workspace = true
 
@@ -27,19 +26,16 @@ system_traits = { workspace = true, features = [
 derive-new = { workspace = true }
 derive_builder = { workspace = true }
 omni_hasher = { workspace = true }
-futures = { workspace = true }
-rs_merkle = { workspace = true }
 bs58 = { workspace = true }
-url = { workspace = true }
 maps = { workspace = true }
 yoke = { workspace = true }
 omni_types = { workspace = true, features = ["serde"] }
-byteorder = { workspace = true }
 globset = { workspace = true }
 bytes = { workspace = true }
 trace = { workspace = true, optional = true }
 tracing = { workspace = true, optional = true }
 time = { workspace = true }
+omni_utils = { workspace = true }
 
 [dev-dependencies]
 tempfile = { workspace = true }
