refactor: utilize refactored omni_collecter, omni_utils, omni_hasher in omni_cache

--- a/crates/omni_collector/Cargo.toml
+++ b/crates/omni_collector/Cargo.toml
@@ -22,3 +22,4 @@ tracing = { workspace = true, optional = true }
 enum-map = { workspace = true }
 globset = { workspace = true }
 omni_utils = { workspace = true }
+derive-new = { workspace = true }
