--- a/crates/omni_cache/Cargo.toml
+++ b/crates/omni_cache/Cargo.toml
@@ -36,6 +36,7 @@ trace = { workspace = true, optional = true }
 tracing = { workspace = true, optional = true }
 time = { workspace = true }
 omni_utils = { workspace = true }
+omni_collector = { workspace = true }
 
 [dev-dependencies]
 tempfile = { workspace = true }
