--- a/crates/omni_hasher/Cargo.toml
+++ b/crates/omni_hasher/Cargo.toml
@@ -6,7 +6,8 @@ version.workspace = true
 repository.workspace = true
 
 [features]
-default = ["blake3"]
+default = ["blake3", "enable-tracing"]
+enable-tracing = ["dep:tracing", "dep:trace", "trace/enabled"]
 blake3 = ["dep:blake3"]
 
 [dependencies]
@@ -26,6 +27,8 @@ byteorder = { workspace = true }
 dir_walker = { workspace = true }
 bincode = { workspace = true }
 omni_utils = { workspace = true }
+trace = { workspace = true, optional = true }
+tracing = { workspace = true, optional = true }
 
 
 [dev-dependencies]
