--- a/crates/omni_cli_core/Cargo.toml
+++ b/crates/omni_cli_core/Cargo.toml
@@ -13,6 +13,7 @@ enable-tracing = [
     "dep:tracing",
     "dep:tracing-core",
     "dep:tracing-subscriber",
+    "dep:tracing-futures",
 ]
 
 [dependencies]
@@ -29,6 +30,7 @@ trace = { workspace = true, optional = true }
 tracing = { workspace = true, optional = true }
 tracing-core = { workspace = true, optional = true }
 tracing-subscriber = { workspace = true, optional = true }
+tracing-futures = { workspace = true, optional = true }
 omni_types = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
@@ -75,6 +77,7 @@ bytes = { workspace = true }
 owo-colors = { workspace = true }
 tiny-gradient = { workspace = true }
 omni_expressions = { workspace = true }
+omni_collector = { workspace = true }
 shlex = { workspace = true }
 
 [build-dependencies]
