ci: update rust toolchain setup to utilize rust-toolchain.toml file

--- a/.github/actions/setup/action.yaml
+++ b/.github/actions/setup/action.yaml
@@ -56,7 +56,10 @@ runs:
 
     - name: Install Rust
       if: inputs.install-rust == 'true'
-      uses: dtolnay/rust-toolchain@stable
+      uses: dtolnay/rust-toolchain@v1
+      with:
+        toolchain: + # use the toolchain specified in rust-toolchain.toml
+        components: rustfmt, clippy
 
     - name: Install Bun
       if: inputs.install-bun == 'true'
