--- a/.github/actions/setup/action.yaml
+++ b/.github/actions/setup/action.yaml
@@ -42,7 +42,7 @@ runs:
     # Placeholder for future use
     - name: Get Workspace Hash
       id: get_workspace_hash
-      run: echo "workspace_hash=1" >> $GITHUB_OUTPUT
+      run: echo "workspace_hash=$(omni hash -r workspace)" >> $GITHUB_OUTPUT
       shell: bash
 
     - name: Cache Omni directory
